--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <dd><a href="">重置密码</a></dd>
                     </dl>
                 </li>
-                <li class="layui-nav-item" lay-header-event="menuRight" lay-unselect>
+                <li class="layui-nav-item" lay-header-event="menuRight" lay-unselect id="exitBtn">
                     <a href="javascript:;">退出</a>
                 </li>
             </ul>
